Fix swagger description for getting all properties
